hphp/test/slow/reified_generics/incorrect-num-reified-extends-3.php.expectf
Fatal error: Class C expects 2 reified generics but 1 given in %s on line 6
